# ResumePipeline

./: .gitignore  CODEBASE.md  README.md  docker-compose.yml  session2  start.ps1  start.sh
.agent-tasks/: PROJECT_STATUS.md  (+10 more)
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  start_server.sh
backend/app/: __init__.py  config.py  main.py
backend/app/api/: config.py  history.py  profile.py  projects.py  resume.py  router.py
backend/app/models/: __init__.py  application.py  generation.py  profile.py  project.py
backend/app/pipeline/: __init__.py  keyword_analysis_service.py  latex_renderer.py  matching_service.py  orchestrator.py  pdf_compiler.py  resume_points_generator.py  resume_writer.py
backend/app/services/: __init__.py  history_service.py  llm_service.py  profile_service.py  project_sweep_service.py  prompt_manager.py
backend/app/templates/latex/: resume_template.tex.j2
backend/app/templates/prompts/: keyword_analysis.j2  project_matching.j2  resume_points.j2  resume_writeup.j2
backend/app/utils/: file_utils.py  sse.py
backend/data/: profile.yaml  subjective_profile.md
backend/data/applications/applications/: app-20260715-005.json  app-20260721-001.json  app-20260721-002.json
backend/scripts/: test_llm.py  test_results.json
backend/tests/: conftest.py  test_api.py  test_history_service.py  test_keyword_analysis_service.py  test_latex_renderer.py  test_llm_service.py  test_matching_service.py  test_orchestrator.py  test_phase7_regressions.py  test_profile_service.py  test_project_sweep_service.py  test_prompt_manager.py
(+86 files in other folders)
