[project]
name = "resume-pipeline-backend"
version = "0.1.0"
description = "Backend for the Resume Pipeline application"
requires-python = ">=3.11"

dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]",
    "litellm>=1.40",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.1",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
